# nats-archive-compactor

./: .gitignore  .pre-commit-config.yaml  .renovaterc.json5  Dockerfile  README.md  pyproject.toml
.github/workflows/: auto-release.yaml  ci.yaml  release.yaml  renovate.yaml
src/nats_archive_compactor/: __init__.py  __main__.py
tests/: test_resolve_streams.py  test_smoke.py
