[project]
name = "nats-archive-compactor"
version = "0.4.0"
description = "Daily compactor that merges 24 hourly Parquet files per stream into one daily file in the nats-archive bucket on RustFS"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.14.6"
authors = [
    { name = "Alexander Zimmermann" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
]
dependencies = [
    "pyarrow>=24.0.0",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]

[project.scripts]
nats-archive-compactor = "nats_archive_compactor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nats_archive_compactor"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
# pyarrow ships partial stubs — `pyarrow.fs.S3FileSystem`, `FileSelector`,
# `FileType`, and the read_table/write_table functions are missing or
# untyped in the upstream stubs.
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nats_archive_compactor.__main__"]
disable_error_code = ["name-defined", "attr-defined", "no-untyped-call"]

# Pylance/Pyright counterparts — quiet the same pyarrow stub gaps.
[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportAttributeAccessIssue = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
reportPrivateImportUsage = "none"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
